--- a/output.css
+++ b/output.css
@@ -245,6 +245,9 @@
   .top-12 {
     top: calc(var(--spacing) * 12);
   }
+  .top-20 {
+    top: calc(var(--spacing) * 20);
+  }
   .top-25 {
     top: calc(var(--spacing) * 25);
   }
@@ -263,17 +266,26 @@
   .top-46 {
     top: calc(var(--spacing) * 46);
   }
+  .top-50 {
+    top: calc(var(--spacing) * 50);
+  }
   .top-55 {
     top: calc(var(--spacing) * 55);
   }
   .top-60 {
     top: calc(var(--spacing) * 60);
   }
+  .top-61 {
+    top: calc(var(--spacing) * 61);
+  }
   .top-65 {
     top: calc(var(--spacing) * 65);
   }
   .top-70 {
     top: calc(var(--spacing) * 70);
+  }
+  .top-78 {
+    top: calc(var(--spacing) * 78);
   }
   .top-80 {
     top: calc(var(--spacing) * 80);
@@ -347,6 +359,9 @@
   .right-2 {
     right: calc(var(--spacing) * 2);
   }
+  .right-3 {
+    right: calc(var(--spacing) * 3);
+  }
   .right-4 {
     right: calc(var(--spacing) * 4);
   }
@@ -364,6 +379,9 @@
   }
   .right-30 {
     right: calc(var(--spacing) * 30);
+  }
+  .right-31 {
+    right: calc(var(--spacing) * 31);
   }
   .right-35 {
     right: calc(var(--spacing) * 35);
@@ -687,6 +705,9 @@
   .h-\[2px\] {
     height: 2px;
   }
+  .w-0 {
+    width: calc(var(--spacing) * 0);
+  }
   .w-2 {
     width: calc(var(--spacing) * 2);
   }
@@ -741,6 +762,12 @@
   .w-50 {
     width: calc(var(--spacing) * 50);
   }
+  .w-60 {
+    width: calc(var(--spacing) * 60);
+  }
+  .w-65 {
+    width: calc(var(--spacing) * 65);
+  }
   .w-70 {
     width: calc(var(--spacing) * 70);
   }
@@ -761,6 +788,9 @@
   }
   .max-w-9 {
     max-width: calc(var(--spacing) * 9);
+  }
+  .max-w-15 {
+    max-width: calc(var(--spacing) * 15);
   }
   .max-w-20 {
     max-width: calc(var(--spacing) * 20);
@@ -927,6 +957,9 @@
   }
   .gap-y-12 {
     row-gap: calc(var(--spacing) * 12);
+  }
+  .rounded {
+    border-radius: 0.25rem;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -1122,6 +1155,9 @@
   }
   .px-13 {
     padding-inline: calc(var(--spacing) * 13);
+  }
+  .px-15 {
+    padding-inline: calc(var(--spacing) * 15);
   }
   .px-19 {
     padding-inline: calc(var(--spacing) * 19);
@@ -1398,6 +1434,11 @@
       top: calc(var(--spacing) * 12);
     }
   }
+  .md\:top-25 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 25);
+    }
+  }
   .md\:top-35 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * 35);
@@ -1526,6 +1567,11 @@
   .md\:-right-190 {
     @media (width >= 48rem) {
       right: calc(var(--spacing) * -190);
+    }
+  }
+  .md\:right-0 {
+    @media (width >= 48rem) {
+      right: calc(var(--spacing) * 0);
     }
   }
   .md\:right-10 {
@@ -1693,6 +1739,11 @@
   .md\:w-10 {
     @media (width >= 48rem) {
       width: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:w-75 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 75);
     }
   }
   .md\:w-90 {
@@ -1960,6 +2011,11 @@
   .md\:px-20 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:px-21 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 21);
     }
   }
   .md\:px-25 {
